# GearVRf-Tests

./: .gitignore  README.md  common.gradle
3DS_Max_exports_to_FBX_OBJ_X3D/: 3DS_Max_exports_to_FBX_OBJ_X3D.docx
3DS_Max_exports_to_FBX_OBJ_X3D/Original_3DS_Max_and_WRL_files/: teapot.max  teapotanimated.WRL  teapotlights.WRL  teapotlights.max  torusanimated.WRL  torusanimatedlights.WRL  torusanimatedlights.max
3DS_Max_exports_to_FBX_OBJ_X3D/animation/: teapotanimated.FBX  teapotanimated.x3d  torusanimated.FBX  torusanimated.x3d
3DS_Max_exports_to_FBX_OBJ_X3D/animation_plus_lights/: teapotlights.FBX  teapotlights.x3d  torusanimatedlights.FBX  torusanimatedlights.x3d
3DS_Max_exports_to_FBX_OBJ_X3D/static_mesh_includes_OBJ/: teapot.fbx  teapot.mtl  teapot.x3d  torus.fbx  torus.mtl  torus.x3d
asset-tests/: build.gradle
asset-tests/app/: build.gradle
asset-tests/app/src/main/cpp/: CMakeLists.txt  helpers.cpp
framework-tests/: .gvrf  build.gradle  gvrf
framework-tests/app/: build.gradle
framework-tests/app/src/main/cpp/: CMakeLists.txt  helpers.cpp
gearvrf-libs/: ReadMe.txt
golden_masters/: SM-G930V  SM-G935S  SM-N910V
gvr-tester/: settings.gradle
gvr-tester/app/: build.gradle
gvr-testperf/: runTestPerf.sh
gvr-testperf/app/: build.gradle
gvr-unittestutils/: build.gradle
jassimp/animals/: bear teeth alpha.tga  bear-obj.mtl  boar-obj.mtl  wolf-obj.mtl
jassimp/astro-bug/: Astro.FBX
jassimp/bmw/: bmw.FBX
jassimp/cube/: cube.fbx  cube_ambient_specular_texture.fbx  cube_ambient_texture.fbx  cube_default.mtl  cube_diffuse_directionallight.fbx  cube_diffuse_pointlight.fbx  cube_diffuse_spotlight.fbx  cube_diffuse_spotlight_linear.fbx  cube_diffuse_spotlight_linear9.fbx  cube_normal_diffuse_spotlight_linear_decay.fbx  cube_normal_diffuse_spotlight_quadratic_decay.fbx  cube_notexture.dae  cube_notexture.fbx  cube_pointlights.dae  cube_pointlights.mtl  cube_wrongtex.fbx
jassimp/hippo/: hippo.mtl
jassimp/instance/: instance_test.fbx
jassimp/lightmap/: lightmap_test.fbx  lightmap_test.lxo
jassimp/test1/: Test1.FBX  Thumbs.db
physics-tests/: build.gradle  settings.gradle
physics-tests/app/: build.gradle  proguard-rules.pro
scripts/: runtest
unit-tests/: Samples issues.txt  gitTest.txt  gradle.properties  settings.gradle
unit-tests/app/: build.gradle  proguard-rules.pro
unit-tests/vrappframework/: build.gradle
vrapi/: build.gradle
x3d/Cylinder and Sphere Sensor/: Cylinder and Sphere Sensor - Interactivity.docx  Cylinder and Sphere Sensor.docx  SphereSensor_CtrlMaterial.x3d  SphereSensor_CtrlTranslation.x3d  SphereSensor_ObjControlsAnother.x3d  SphereSensor_basic.x3d  SphereSensor_twoObjects.x3d  cylSensor_CtrlLtColor.x3d  cylSensor_CtrlMaterial.x3d  cylSensor_CtrlRotation.x3d  cylSensor_CtrlTextureTransform.x3d  cylSensor_ObjControlsAnother.x3d  cylSensor_basic.x3d  cylSensor_dial.x3d
x3d/Exported_by_3d_modeling_tools/: bscontact04.x3d  teapotandtoruspointlights.x3d  teapottorusdirlights.x3d  torus.x3d  torusrainbow.wrl
x3d/Movie_Texture/: Movie Texture demo documentation.docx  MovieTexture01.x3d  MovieTextureChange.x3d  MovieTexture_GotoFrame.x3d  MovieTexture_MultipleMovies.x3d  MovieTexture_PitchSpeed.x3d  MovieTexture_PitchSpeed4x.x3d  MovieTexture_SliderBar.x3d  MovieTexture_StopStartPause.x3d  MovieTexture_primitive.x3d  MovieTexture_teapot.x3d
x3d/MultiTexture/: MultiTexture.docx  (+7 more)
(+486 files in other folders)
